# auto_gator

./: LICENSE  README.md  __init__.py  example.ipynb  pyproject.toml  requirements.txt
src/: autogator.py  gating_tools.py
test_data/Spleenocytes/: Spleenocytes_Tcells_FMO- no CD4 staining_002.fcs  Spleenocytes_Tcells_Unstained_control_001.fcs
test_data/Spleenocytes/attachments/: LST_Depletion_check_14-Feb-2022.wsp
